# python-flashcards

./: .gitignore  README.md  pyproject.toml
data/: schema.sql
flashcards/: base.py  database.py
tests/: test_flashcards.py
