[tool.poetry]
name = "python-flashcards"
version = "0.1.0"
description = "Simple Flashcards GUI Application"
authors = [
    "Łukasz Jackiewicz <lukasz.jackiewicz94@gmail.com>",
]

packages = [
    { include = "flashcards" }
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
